--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -7,7 +7,8 @@ mydir=.
 #	plugins/preauth/wpse
 #	plugins/preauth/cksum_body
 #	plugins/authdata/greet
-SUBDIRS=util include lib \
+SUBDIRS=util include plugins/prng   plugin_core  lib \
+	plugins/prng/plugin_yarrow   plugin_core/impl   \
 	@ldap_plugin_dir@ \
 	plugins/kdb/db2 \
 	plugins/preauth/pkinit \
