Moved plugin initialization into krb5int_lib_init from the applications. (It is still needed in the appl, e.g. t_prng, where krb5 lib is not initialized). Make check works until it reaches ./t_gssapi.py
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/plugins@23915 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -7,8 +7,7 @@ mydir=.
 #	plugins/preauth/wpse
 #	plugins/preauth/cksum_body
 #	plugins/authdata/greet
-SUBDIRS=util include plugins/prng   plugin_core  lib \
-	plugins/prng/plugin_yarrow   plugin_core/impl   \
+SUBDIRS=util include plugin_core   plugins/prng lib \
 	@ldap_plugin_dir@ \
 	plugins/kdb/db2 \
 	plugins/preauth/pkinit \
@@ -17,6 +16,8 @@ SUBDIRS=util include plugins/prng   plugin_core  lib \
 	config-files gen-manpages
 BUILDTOP=$(REL)$(C)
 LOCALINCLUDES = -I$(srcdir) 
+
+#	plugins/prng/plugin_yarrow   
 
 SRCS =  
 HDRS = 
