--- a/src/config/pre.in
+++ b/src/config/pre.in
@@ -324,8 +324,8 @@ GSSRPC_DEPLIB	= $(TOPLIBD)/libgssrpc$(DEPLIBEXT)
 GSS_DEPLIB	= $(TOPLIBD)/libgssapi_krb5$(DEPLIBEXT)
 KRB5_DEPLIB	= $(TOPLIBD)/libkrb5$(DEPLIBEXT)
 CRYPTO_DEPLIB	= $(TOPLIBD)/libk5crypto$(DEPLIBEXT)
-PLUGIN_CORE_DEPLIB	= $(TOPLIBD)/../plugin_core/plugin_core$(DEPLIBEXT)
-PLUGIN_PRNG_DEPLIB	= $(TOPLIBD)/../plugins/prng/plugin_prng$(DEPLIBEXT)
+PLUGIN_CORE_DEPLIB	= $(TOPLIBD)/../plugin_core/libplugin_core$(DEPLIBEXT)
+PLUGIN_PRNG_DEPLIB	= $(TOPLIBD)/../plugins/prng/libplugin_prng.a
 COM_ERR_DEPLIB	= $(COM_ERR_DEPLIB-@COM_ERR_VERSION@)
 COM_ERR_DEPLIB-sys = # empty
 COM_ERR_DEPLIB-k5 = $(TOPLIBD)/libcom_err$(DEPLIBEXT)
