--- a/src/lib/crypto/crypto_tests/Makefile.in
+++ b/src/lib/crypto/crypto_tests/Makefile.in
@@ -15,11 +15,7 @@ PROG_RPATH=$(KRB5_LIBDIR)
 DEFS=
 
 PLUGINS_LIBS = \
-	../../../plugin_core/impl/plugin_default_manager.so 	\
-	../../../plugin_core/impl/plugin_default_factory.so 	\
-	../../../plugins/prng/plugin_yarrow/plugin_prng_impl.so \
-	../../../plugins/prng/plugin_yarrow/yarrow.so 	\
-	../../../plugins/prng/plugin_yarrow/ycipher.so
+	$(srcdir)/../../libplugin_impl.a $(srcdir)/../../libplugin_yarrow.a
 
 EXTRADEPSRCS=\
 	$(srcdir)/t_nfold.c	\
@@ -51,15 +47,15 @@ EXTRADEPSRCS=\
 # checksums that interoperate.
 #  check-unix:: t_nfold t_encrypt t_prf t_prng t_hmac \
 #
-check-unix:: t_prng t_nfold t_encrypt t_hmac t_prf\
+check-unix:: t_encrypt t_prng t_nfold t_encrypt t_hmac t_prf\
 		t_cksum4 t_cksum5 \
 		aes-test  \
 		t_mddriver4 t_mddriver \
 		t_crc t_cts t_short
+	$(RUN_SETUP) $(VALGRIND) ./t_encrypt
 	$(RUN_SETUP) $(VALGRIND) ./t_prng <$(srcdir)/t_prng.seed >t_prng.output && \
 	diff t_prng.output $(srcdir)/t_prng.expected
 	$(RUN_SETUP) $(VALGRIND) ./t_nfold
-	$(RUN_SETUP) $(VALGRIND) ./t_encrypt
 	$(RUN_SETUP) $(VALGRIND) ./t_hmac
 	$(RUN_SETUP) $(VALGRIND) ./t_prf <$(srcdir)/t_prf.in >t_prf.output
 	diff t_prf.output $(srcdir)/t_prf.expected
