--- a/src/plugin_core/impl/Makefile.in
+++ b/src/plugin_core/impl/Makefile.in
@@ -1,5 +1,6 @@
 mydir=impl
 BUILDTOP=$(REL)../..
+RELDIR=../plugin_core/impl
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 DEFS=
@@ -8,22 +9,26 @@ LOCALINCLUDES = -I$(srcdir)/../../include/krb5  -I$(srcdir)/. 	\
 		-I$(srcdir)/../../plugins/prng/plugin_yarrow -I$(srcdir)/../../plugins/prng 	\
 		-I$(srcdir)/..
 
- 
-STLIBOBJS= plugin_default_factory.o plugin_default_manager.o
+LIBBASE=plugin_impl
 
-OBJS=\
-	$(OUTPRE)plugin_default_manager.$(OBJEXT) \
-	$(OUTPRE)plugin_default_factory.$(OBJEXT) 
+STLIBOBJS= plugin_default_factory.o plugin_default_manager.o
 
 SRCS= plugin_default_factory.c plugin_default_manager.c
 
-all-unix:: all-libobjs
+STOBJLISTS=OBJS.ST
 
-includes:: depend
+LIBS_UTILS = ../plugin_core$(SO_EXT) \
+	../../plugins/prng/plugin_yarrow/plugin_prng_impl$(SO_EXT) 	\
+	../../plugins/prng/plugin_yarrow/ycipher$(SO_EXT) 		\
+	../../plugins/prng/plugin_yarrow/yarrow$(SO_EXT) 
 
-depend:: $(SRCS)
+SHLIB_EXPLIBS=  $(LIBS_UTILS) $(CRYPTO_DEPLIB) $(SUPPORT_DEPLIB)
 
-clean-unix:: clean-libobjs
+all-unix:: all-liblinks
+clean-unix:: clean-liblinks clean-libs clean-libobjs
+install-unix:: install-libs
 
+
+@libpriv_frag@
+@lib_frag@
 @libobj_frag@
-
