For the experiment and as a proof of the concept, implement preauth/encrypted_challenge server side as a new plugin under the new arch. This commit is for plugin implementation and initialization only. Next step is to invoke the code in kdc.
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/plugins@23923 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -7,7 +7,9 @@ mydir=.
 #	plugins/preauth/wpse
 #	plugins/preauth/cksum_body
 #	plugins/authdata/greet
-SUBDIRS=util include plugin_core   plugins/prng lib \
+SUBDIRS=util include plugin_core   plugins/prng \
+	plugins/pa plugins/pa/encrypted_challenge \
+	lib \
 	@ldap_plugin_dir@ \
 	plugins/kdb/db2 \
 	plugins/preauth/pkinit \
