Fix the actual python command to match the displayed one in the check-pytests-yes rule in r23913.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23931 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/post.in
+++ b/src/config/post.in
@@ -139,9 +139,11 @@ check-pytests:: check-pytests-@HAVE_PYTHON@
 check-pytests-yes:
 	@pytests="$(PYTESTS)"; \
 	for t in $$pytests; do \
-		echo PYTHONPATH=$(BUILDTOP):$(top_srcdir)/util VALGRIND="$(VALGRIND)" \
+		echo PYTHONPATH=$(BUILDTOP):$(top_srcdir)/util \
+			VALGRIND="$(VALGRIND)" \
 			$(PYTHON) $(srcdir)/$$t $(PYTESTFLAGS); \
-		PYTHONPATH=`pwd`:$(top_srcdir)/util VALGRIND="$(VALGRIND)" \
+		PYTHONPATH=$(BUILDTOP):$(top_srcdir)/util \
+			VALGRIND="$(VALGRIND)" \
 			$(PYTHON) $(srcdir)/$$t $(PYTESTFLAGS) || exit 1; \
 	done
 
