Run Python tests as individual rule commands (friendlier to make -k) instead of in a loop.  Build runenv.py as part of make fake-install; it's harmless if Python is unavailable.  Import runenv later in k5test so that we get a beter error message if make fake-install hasn't been run.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23932 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -106,7 +106,7 @@ install-headers-prerecurse: install-headers-mkdirs
 # install::
 #	$(MAKE) $(MFLAGS) install.man
 
-fake-install:
+fake-install: runenv.py
 	$(RM) -r $(FAKEPREFIX)
 	@for i in $(INSTALLMKDIRS); do \
 		$(srcdir)/config/mkinstalldirs util/fakedest$$i; \
@@ -627,12 +627,10 @@ check-unix:: krb5-config
 check-prerecurse: fake-install
 
 # Create a test realm and spawn a shell in an environment pointing to it.
-testrealm: fake-install runenv.py
+testrealm: fake-install
 	PYTHONPATH=$(BUILDTOP):$(top_srcdir)/util $(PYTHON) $(srcdir)/util/testrealm.py
 
 # environment variable settings to propagate to Python-based tests
-
-check-pytests-yes: runenv.py
 
 pyrunenv.vals: Makefile
 	$(KRB5_RUN_ENV) \
