--- a/src/config/pre.in
+++ b/src/config/pre.in
@@ -244,6 +244,9 @@ host=@krb5_cv_host@
 DEJAFLAGS	= --debug --srcdir $(srcdir) --host $(host)
 RUNTEST		= runtest $(DEJAFLAGS)
 
+RUNPYTEST	= PYTHONPATH=$(BUILDTOP):$(top_srcdir)/util \
+			VALGRIND="$(VALGRIND)" $(PYTHON)
+
 START_SERVERS	= $(STESTDIR)/scripts/start_servers $(TEST_SERVER) $(TEST_PATH)
 START_SERVERS_LOCAL = $(STESTDIR)/scripts/start_servers_local
 
@@ -572,8 +575,7 @@ VALGRIND1 = valgrind --tool=memcheck --log-file=$(VALGRIND_LOGDIR)/vg --trace-ch
 # something that looks like an FQDN, with an IPv4 address.
 OFFLINE=no
 
-# Makefile.in should set PYTESTS to a list of Python test scripts to run.
-PYTESTS=
+# Used when running Python tests.
 PYTESTFLAGS=
 
 ##
