Simplify how k5test scripts get run by importing runenv by pathname (using the imp module) instead of by module name.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23933 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/pre.in
+++ b/src/config/pre.in
@@ -244,8 +244,8 @@ host=@krb5_cv_host@
 DEJAFLAGS	= --debug --srcdir $(srcdir) --host $(host)
 RUNTEST		= runtest $(DEJAFLAGS)
 
-RUNPYTEST	= PYTHONPATH=$(BUILDTOP):$(top_srcdir)/util \
-			VALGRIND="$(VALGRIND)" $(PYTHON)
+RUNPYTEST	= PYTHONPATH=$(top_srcdir)/util VALGRIND="$(VALGRIND)" \
+			$(PYTHON)
 
 START_SERVERS	= $(STESTDIR)/scripts/start_servers $(TEST_SERVER) $(TEST_PATH)
 START_SERVERS_LOCAL = $(STESTDIR)/scripts/start_servers_local
