Build libs/tests with libencrypted_challenge.a
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/plugins@23949 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/crypto_tests/Makefile.in
+++ b/src/lib/crypto/crypto_tests/Makefile.in
@@ -14,8 +14,8 @@ PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 DEFS=
 
-PLUGINS_LIBS = \
-	$(srcdir)/../../libplugin_impl.a $(srcdir)/../../libplugin_yarrow.a
+PLUGINS_LIBS = -lkrb5 \
+	$(srcdir)/../../libplugin_impl.a $(srcdir)/../../libplugin_yarrow.a $(srcdir)/../../libencrypted_challenge.a
 
 EXTRADEPSRCS=\
 	$(srcdir)/t_nfold.c	\
