--- a/src/kdc/Makefile.in
+++ b/src/kdc/Makefile.in
@@ -6,17 +6,20 @@ BUILDTOP=$(REL)..
 #                define USE_RCACHE)
 # These are now set in configure.in.
 DEFINES = # -DNOCACHE
+PLUGIN_PA = ../plugins/pa/libplugin_pa.a
 RUN_SETUP = @KRB5_RUN_ENV@
 PROG_LIBPATH=-L$(TOPLIBD) $(KRB4_LIBPATH)
 KDB5_LIB_DEPS=$(DL_LIB) $(THREAD_LINKOPTS)
 PROG_RPATH=$(KRB5_LIBDIR)
 DEFS=-DLIBDIR=\"$(KRB5_LIBDIR)\"
 
+
+
 all:: krb5kdc rtest
 
 # DEFINES = -DBACKWARD_COMPAT $(KRB4DEF)
 
-LOCALINCLUDES = -I.
+LOCALINCLUDES = -I. -I../plugins/pa/encrypted_challenge -I../plugin_core -I../plugins/pa
 SRCS= \
 	kdc5_err.c \
 	$(srcdir)/dispatch.c \
@@ -25,6 +28,7 @@ SRCS= \
 	$(srcdir)/fast_util.c \
 	$(srcdir)/kdc_util.c \
 	$(srcdir)/kdc_preauth.c \
+	$(srcdir)/enc_challenge.c \
 	$(srcdir)/main.c \
 	$(srcdir)/policy.c \
 	$(srcdir)/extern.c \
@@ -39,6 +43,7 @@ OBJS= \
 	fast_util.o \
 	kdc_util.o \
 	kdc_preauth.o \
+	enc_challenge.o \
 	main.o \
 	policy.o \
 	extern.o \
@@ -59,7 +64,7 @@ kdc5_err.h: kdc5_err.et
 kdc5_err.o: kdc5_err.h
 
 krb5kdc: $(OBJS) $(KADMSRV_DEPLIBS) $(KRB5_BASE_DEPLIBS) $(APPUTILS_DEPLIB)
-	$(CC_LINK) -o krb5kdc $(OBJS) $(APPUTILS_LIB) $(KADMSRV_LIBS) $(KRB5_BASE_LIBS)
+	$(CC_LINK) -o krb5kdc $(OBJS) $(APPUTILS_LIB) $(KADMSRV_LIBS) $(KRB5_BASE_LIBS)  $(PLUGIN_PA)
 
 rtest: $(RT_OBJS) $(KDB5_DEPLIBS) $(KADM_COMM_DEPLIBS) $(KRB5_BASE_DEPLIBS)
 	$(CC_LINK) -o rtest $(RT_OBJS) $(KDB5_LIBS) $(KADM_COMM_LIBS) $(KRB5_BASE_LIBS)
