--- a/src/kadmin/dbutil/Makefile.in
+++ b/src/kadmin/dbutil/Makefile.in
@@ -8,10 +8,10 @@ KDB_DEP_LIB=$(DL_LIB) $(THREAD_LINKOPTS)
 
 PROG = kdb5_util
 
-SRCS = kdb5_util.c kdb5_create.c kadm5_create.c string_table.c kdb5_destroy.c \
+SRCS = kdb5_util.c kdb5_create.c kadm5_create.c kdb5_destroy.c \
 	   kdb5_stash.c import_err.c strtok.c dump.c ovload.c kdb5_mkey.c
 
-OBJS = kdb5_util.o kdb5_create.o kadm5_create.o string_table.o kdb5_destroy.o \
+OBJS = kdb5_util.o kdb5_create.o kadm5_create.o kdb5_destroy.o \
 	   kdb5_stash.o import_err.o strtok.o dump.o ovload.o kdb5_mkey.o
 
 GETDATE = ../cli/getdate.o
