--- a/src/kdc/Makefile.in
+++ b/src/kdc/Makefile.in
@@ -13,13 +13,15 @@ KDB5_LIB_DEPS=$(DL_LIB) $(THREAD_LINKOPTS)
 PROG_RPATH=$(KRB5_LIBDIR)
 DEFS=-DLIBDIR=\"$(KRB5_LIBDIR)\"
 
+LIBS_PROFILE = $(BUILDTOP)/util/profile/libprofile.so
+
 
 
 all:: krb5kdc rtest
 
 # DEFINES = -DBACKWARD_COMPAT $(KRB4DEF)
 
-LOCALINCLUDES = -I. -I../plugins/pa/encrypted_challenge -I../plugin_core -I../plugins/pa
+LOCALINCLUDES = -I. -I../plugins/pa/encrypted_challenge -I../plugin_core -I../plugins/pa -I../plugin_core/impl -I../plugin_core -I../plugins/prng -I../plugins/prng/plugin_yarrow
 SRCS= \
 	kdc5_err.c \
 	$(srcdir)/dispatch.c \
@@ -64,10 +66,10 @@ kdc5_err.h: kdc5_err.et
 kdc5_err.o: kdc5_err.h
 
 krb5kdc: $(OBJS) $(KADMSRV_DEPLIBS) $(KRB5_BASE_DEPLIBS) $(APPUTILS_DEPLIB)
-	$(CC_LINK) -o krb5kdc $(OBJS) $(APPUTILS_LIB) $(KADMSRV_LIBS) $(KRB5_BASE_LIBS)  $(PLUGIN_PA)
+	$(CC_LINK) -o krb5kdc $(OBJS) $(APPUTILS_LIB) $(KADMSRV_LIBS) $(KRB5_BASE_LIBS)  $(PLUGIN_PA) $(LIBS_PROFILE)
 
 rtest: $(RT_OBJS) $(KDB5_DEPLIBS) $(KADM_COMM_DEPLIBS) $(KRB5_BASE_DEPLIBS)
-	$(CC_LINK) -o rtest $(RT_OBJS) $(KDB5_LIBS) $(KADM_COMM_LIBS) $(KRB5_BASE_LIBS)
+	$(CC_LINK) -o rtest $(RT_OBJS) $(KDB5_LIBS) $(KADM_COMM_LIBS) $(KRB5_BASE_LIBS)  $(LIBS_PROFILE)
 
 check-unix:: rtest
 	KRB5_CONFIG=$(top_srcdir)/config-files/krb5.conf ; export KRB5_CONFIG ; \
